# suzhou-small-llm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: knowledge-base.md
.planning/debug/resolved/: dataset-generate-404.md
.planning/phases/01-infrastructure-and-ingestion/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-rag-api/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-REVIEW.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-dataset-generation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-UAT.md
.planning/quick/260416-pmt-app-src-fastapi/: 260416-pmt-PLAN.md  260416-pmt-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
app/: config.py  main.py
app/api/: documents.py  health.py
app/services/: document_parser.py  embeddings.py  text_splitter.py  vector_store.py
kong/: setup.sh
src/: config.py  embeddings.py  main.py  vectorstore.py
src/api/: __init__.py  chat.py  documents.py  schemas.py
src/api/routes/: dataset.py
src/dataset/: __init__.py  exporter.py  generator.py  models.py
src/models/: document.py
src/rag/: __init__.py  graph.py  nodes.py  prompts.py  state.py
tests/: test_chat_endpoint.py  test_dataset_exporter.py  test_dataset_generator.py  test_rag_graph.py
(+1 files in other folders)
