[project]
name = "suzhou-small-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.5.7",
    "dashscope==1.25.17",
    "docx2txt>=0.9",
    "fastapi==0.135.3",
    "httpx>=0.28.1",
    "langchain==1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community==0.4.1",
    "langchain-core==1.2.30",
    "langchain-qwq==0.3.4",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.1.6",
    "pydantic==2.13.1",
    "pydantic-settings>=2.13.1",
    "pymupdf==1.27.2.2",
    "pypdf==6.10.2",
    "python-docx==1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart==0.0.26",
    "tiktoken>=0.12.0",
    "uvicorn[standard]==0.44.0",
]
